# md-reader

./: .gitignore  CHANGELOG.md  DEMO.md  HANDOVER.md  LINKEDIN_POST.md  README.md  REDDIT_POST.md  package-lock.json  package.json  sample.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: release.yml
docs/: cinematic-site.css  cinematic-site.js  hero-scene.js  index.html  robots.txt  site-data.js  sitemap.xml  styles.css
docs/img/: README.md
docs/proposals/: live-edit-theatre.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: inspect.rs
src-tauri/src/: commands.rs  lib.rs  markdown.rs  watcher.rs
src/lib/: About.svelte  Editor.svelte  FileBrowser.svelte  Find.svelte  LeftPanel.svelte  Settings.svelte  SmartEditor.svelte  TabBar.svelte  Toc.svelte  Viewer.svelte  api.ts  post-render.ts  settings-store.svelte.ts  smart-diff.ts  tabs-store.svelte.ts
src/lib/llm/: anthropic.ts  groq.ts  index.ts  types.ts
src/lib/theatre/: DiffSidebar.svelte  ResumeChip.svelte  SidebarConnectors.svelte  StatusBar.svelte  TipBanner.svelte  diff-engine.ts  store.svelte.ts  types.ts
src/routes/: +page.svelte
test-fixtures/: round-trip.md
