[package]
name = "md-reader"
version = "0.1.0"
description = "Lightweight cross-platform Markdown viewer"
authors = ["md-reader contributors"]
edition = "2021"

[lib]
name = "md_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

comrak = { version = "0.43", default-features = false, features = ["syntect"] }
notify = "8"
notify-debouncer-full = "0.5"

once_cell = "1"
parking_lot = "0.12"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
