[package]
name = "md-reader"
version = "0.4.0"
description = "Lightweight cross-platform Markdown viewer"
authors = ["md-reader contributors"]
edition = "2021"

[lib]
name = "md_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables F12 / right-click → Inspect even in release builds.
# Without this we cannot debug spawned windows in production.
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

comrak = { version = "0.43", default-features = false, features = ["syntect"] }
notify = "8"
notify-debouncer-full = "0.5"

once_cell = "1"
parking_lot = "0.12"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"

# Windows-only: needed for AllowSetForegroundWindow so a torn-out child
# process can bring its own window to the front on spawn (the default
# Windows policy buries new windows behind the parent).
[target."cfg(windows)".dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
